# KMeans

./: CMakeLists.txt  bool.h  kmeans.c  kmeans.py  kmeans_algo.h  kmeans_file_input.c  kmeans_file_input.h  kmeanspp.py  linked_list.h  linked_list_tests.c  linked_list_tests.h  main.c
Corrections/: CMakeLists.txt  bonus.py  k_means.cp38-win_amd64.pyd  kmeans.c  kmeans_pp.py
Kmeanspp With Python/: bonus.py  kmeans.c  kmeans_pp.py  setup.py
